[🐛 Fix] Fix image height on Safari

--- a/theme/static/sass/_common.sass
+++ b/theme/static/sass/_common.sass
@@ -5,7 +5,7 @@
     gap: 8px
     img
       width: 22px
-      height: max-content
+      height: auto
       border-radius: 3px
     a
       font-size: 18px
